--- a/problem-2/package.json
+++ b/problem-2/package.json
@@ -10,6 +10,9 @@
   "dependencies": {
     "axios": "^0.27.2",
     "element-plus": "^2.2.0",
+    "pinia": "^2.0.0-rc.10",
+    "pinia-plugin-persist": "^1.0.0",
+    "vite-plugin-style-import": "^2.0.0",
     "vue": "^3.2.25",
     "vue-router": "^4.0.14"
   },
